--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     </head>
 
     <body>
-        <h1>Hello World</h1>
+        <a href='/include/login.html'>Go to Login</a>
+        <a href='/include/createAccount.html'>Go to Create</a>
 
-	<?php echo "Helloooo Hoooorld!"; ?>
-
+        
 
 
 
