--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     </head>
 
     <body>
-        <a href='/include/login.html'>Go to Login</a>
-        <a href='/include/createAccount.html'>Go to Create</a>
+        <h1><a href='/include/login.html'>Go to Login</a></h1><br>
+        <h1><a href='/include/createAccount.html'>Go to Create</a></h1><br>
+        <h1><a href='/include/homepage.html'>Homepage</a></h1><br>
 
         
 
