--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
 
     <body>
-        <h1><a href='/include/login.html'>Go to Login</a></h1><br>
-        <h1><a href='/include/createAccount.html'>Go to Create</a></h1><br>
-        <h1><a href='/include/homepage.html'>Homepage</a></h1><br>
+        <h1><a href='/include/login.php'>Go to Login</a></h1><br>
+        <h1><a href='/include/createAccount.php'>Go to Create</a></h1><br>
+        <h1><a href='/include/homepage.php'>Homepage</a></h1><br>
 
         
 
