Added main site page. Added user account update info

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel='stylesheet' href='/CSS/index.css'>
     </head>
 
     <body>
+        <!--
         <h1><a href='/include/login.php'>Go to Login</a></h1><br>
         <h1><a href='/include/createAccount.php'>Go to Create</a></h1><br>
         <h1><a href='/include/homepage.php'>Homepage</a></h1><br>
+        -->
 
-        
+
+        <h1 id='Title'>Portfolio Tracker</h1>
+      
+        <h1 id='EnterSite'><a href='/include/login.php'>Enter Site</a></h1>
 
 
 
